# watchlist-api

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2021-12-16-002445_adding_series/: down.sql  up.sql
migrations/2021-12-20-121915_user/: down.sql  up.sql
src/: main.rs
src/controller/: auth.rs  mod.rs  series.rs
src/entity/: mod.rs  schema.rs  series.rs  user.rs
src/service/: auth.rs  mod.rs  series.rs
